@@ -1,3 +1,11 @@
+2009-04-21  Ricard Puig  <rpuig@flumotion.com>
+
+	reviewed by: Zaheer
+
+	* flumotion/component/dvb/dvb.py:
+	Fix bug in using super.
+	Add stats-reporting-interval so we get frontend stats again.
+
 2009-03-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.xml:
